--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="shortcut icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
@@ -12,6 +13,73 @@
 </head>
 <body>
     
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+        <a class="navbar-brand" id="logo" href="#">FS</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                <a class="nav-link" href="#">Intro<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Experiencia</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Últimos trabajos</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Contacto</a>
+                </li>
+            </ul>
+            </div>
+        </div>
+      </nav>
+
+      <header>
+        <div class="text-md-left">
+            <h1 class="font-weight-bold">MI PORTAFOLIO</h1>
+            <hr class="bg-light">
+            <h2 class="font-weight-bold">FELIPE</h2>
+        </div>
+      </header>
+
+      <section class="d-none d-sm-block">
+        <div class="container mt-3">
+          <div class="row">
+              <div class="col-12">  
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio voluptatibus, nesciunt natus voluptatem similique tenetur rem obcaecati libero illo culpa quia cupiditate molestias maxime facere nulla possimus, distinctio reiciendis.</p>
+              </div> 
+          </div>
+          <div class="row">
+            <div class="col-md-6">  
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio voluptatibus, nesciunt natus voluptatem similique tenetur rem obcaecati libero illo culpa quia cupiditate molestias maxime facere nulla possimus, distinctio reiciendis.</p>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis minus natus architecto vero? Assumenda eaque et id architecto magnam corrupti minima unde est cum consequuntur! In rem sit illo impedit.</p>
+            </div> 
+            <div class="col-md-6">  
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio voluptatibus, nesciunt natus voluptatem similique tenetur rem obcaecati libero illo culpa quia cupiditate molestias maxime facere nulla possimus, distinctio reiciendis.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident omnis aspernatur voluptas temporibus officiis tenetur debitis voluptate. Velit odio odit autem, quia beatae consequuntur ullam, quam labore exercitationem, maiores cupiditate!</p>
+            </div> 
+        </div>
+        </div>
+      </section>
+
+      <section class="container">
+        <div class>
+            <h2 class="font-weight-bold text-center my-3 text-secondary">MI EXPERIENCIA</h2>
+            <hr class="bg-secondary">
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <i class="fas fa-shopping-basket fa-9x d-flex justify-content-center my-3"></i>
+            </div>
+            <div class="col-md-6">
+                <i class="fas fa-shopping-basket fa-9x d-flex justify-content-center my-3"></i>
+            </div>
+        </div>  
+      </section>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
