--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@
       </nav>
 
       <header>
-        <div class="text-md-left">
+        <div class="text-sm-left">
             <h1 class="font-weight-bold">MI PORTAFOLIO</h1>
-            <hr class="bg-light">
+            <div>
+                <hr class="bg-light">
+            </div>
             <h2 class="font-weight-bold">FELIPE</h2>
         </div>
       </header>
@@ -72,14 +74,89 @@
             <hr class="bg-secondary">
         </div>
         <div class="row">
-            <div class="col-md-6">
-                <i class="fas fa-shopping-basket fa-9x d-flex justify-content-center my-3"></i>
+            <div class="col-md-6 text-center">
+                <i class="fas fa-shopping-basket fa-8x d-flex justify-content-center my-3 text-muted"></i>
+                <h4>Jefe de Proyectos</h4>
+                <h6>lorem</h6>
             </div>
-            <div class="col-md-6">
-                <i class="fas fa-shopping-basket fa-9x d-flex justify-content-center my-3"></i>
+            <div class="col-md-6 text-center">
+                <i class="fas fa-shopping-basket fa-8x d-flex justify-content-center my-3 text-muted"></i>
+                <h4>Ingeniero de proyectos</h4>
+                <h6>lorem</h6>
             </div>
-        </div>  
+        </div>
       </section>
+
+      <section class="bg-light">
+          <div class="container">
+              <h1 class="font-weight-bold text-center pt-3 m-4 ">MIS ULTIMOS TRABAJOS</h1>
+              <hr class="border border-secondary mb-4">
+            <div class="card-deck">
+                <div class="card m-3">
+                  <img src="assets/img/cuppon.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+                <div class="card m-3">
+                  <img src="assets/img/dmark.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+                <div class="card m-3">
+                  <img src="assets/img/iguana_page.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="card-deck">
+                <div class="card m-3">
+                  <img src="assets/img/meet_coffee.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+                <div class="card m-3">
+                  <img src="assets/img/ricomida.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+                <div class="card m-3">
+                  <img src="assets/img/suricata.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                </div>
+              </div>
+          </div>
+      </section>
+
+      <section>
+        <div class="container">
+            <h1 class="text-center m-5">CONTACTO</h1>
+                <div class="typeform-widget" data-url="https://fsilvagalleguillos.typeform.com/to/I2lkXS" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=I2lkXS&utm_source=typeform.com-01E7RC92N86MNZXVGWQ54W1GCW-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a></div>
+      </section>
+
+      <footer class="bg-secondary">
+          <div class="container">
+            <div class="d-flex justify-content-center align-middle">
+                <h1 class="font-weight-bold text-white">FELIPE =)</h1>
+                <i class="fab fa-instagram fa-4x"></i>
+                <i class="fab fa-facebook-f fa-4x"></i>
+                <i class="fab fa-twitter fa-4x"></i>
+            </div>
+          </div>
+
+      </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
