--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-        <a class="navbar-brand" id="logo" href="#">FS</a>
+        <a class="navbar-brand title_" id="logo" href="#">FS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
             <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                <a class="nav-link" href="#">Intro<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#MI_EXPERIENCIA">Experiencia<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Experiencia</a>
+                <a class="nav-link" href="#MIS_ULTIMOS_TRABAJOS">Últimos trabajos</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Últimos trabajos</a>
+                <a class="nav-link" href="#CONTACTO">Contacto</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" href="#">Contacto</a>
+                <a class="nav-link" href="#RRSS">RRSS</a>
                 </li>
             </ul>
             </div>
@@ -40,11 +40,11 @@
 
       <header>
         <div class="text-sm-left">
-            <h1 class="font-weight-bold">MI PORTAFOLIO</h1>
+            <h1 class="font-weight-bold title_">MI PORTAFOLIO</h1>
             <div>
                 <hr class="bg-light">
             </div>
-            <h2 class="font-weight-bold">FELIPE</h2>
+            <h2 class="font-weight-bold title_">FELIPE</h2>
         </div>
       </header>
 
@@ -52,17 +52,17 @@
         <div class="container mt-3">
           <div class="row">
               <div class="col-12">  
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio voluptatibus, nesciunt natus voluptatem similique tenetur rem obcaecati libero illo culpa quia cupiditate molestias maxime facere nulla possimus, distinctio reiciendis.</p>
+                <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio voluptatibus, nesciunt natus voluptatem similique tenetur rem obcaecati libero illo culpa quia cupiditate molestias maxime facere nulla possimus, distinctio reiciendis.</p>
               </div> 
           </div>
           <div class="row">
             <div class="col-md-6">  
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio voluptatibus, nesciunt natus voluptatem similique tenetur rem obcaecati libero illo culpa quia cupiditate molestias maxime facere nulla possimus, distinctio reiciendis.</p>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis minus natus architecto vero? Assumenda eaque et id architecto magnam corrupti minima unde est cum consequuntur! In rem sit illo impedit.</p>
+              <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio voluptatibus, nesciunt natus voluptatem similique tenetur rem obcaecati libero illo culpa quia cupiditate molestias maxime facere nulla possimus, distinctio reiciendis.</p>
+              <p class="text-justify">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis minus natus architecto vero? Assumenda eaque et id architecto magnam corrupti minima unde est cum consequuntur! In rem sit illo impedit.</p>
             </div> 
             <div class="col-md-6">  
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio voluptatibus, nesciunt natus voluptatem similique tenetur rem obcaecati libero illo culpa quia cupiditate molestias maxime facere nulla possimus, distinctio reiciendis.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident omnis aspernatur voluptas temporibus officiis tenetur debitis voluptate. Velit odio odit autem, quia beatae consequuntur ullam, quam labore exercitationem, maiores cupiditate!</p>
+                <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio voluptatibus, nesciunt natus voluptatem similique tenetur rem obcaecati libero illo culpa quia cupiditate molestias maxime facere nulla possimus, distinctio reiciendis.</p>
+                <p class="text-justify">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident omnis aspernatur voluptas temporibus officiis tenetur debitis voluptate. Velit odio odit autem, quia beatae consequuntur ullam, quam labore exercitationem, maiores cupiditate!</p>
             </div> 
         </div>
         </div>
@@ -70,26 +70,26 @@
 
       <section class="container">
         <div class>
-            <h2 class="font-weight-bold text-center my-3 text-secondary">MI EXPERIENCIA</h2>
+            <h2 class="font-weight-bold text-center my-3 text-secondary title_" id="MI_EXPERIENCIA">MI EXPERIENCIA</h2>
             <hr class="bg-secondary">
         </div>
         <div class="row">
             <div class="col-md-6 text-center">
                 <i class="fas fa-shopping-basket fa-8x d-flex justify-content-center my-3 text-muted"></i>
                 <h4>Jefe de Proyectos</h4>
-                <h6>lorem</h6>
+                <h6>2018 - actualidad</h6>
             </div>
             <div class="col-md-6 text-center">
                 <i class="fas fa-shopping-basket fa-8x d-flex justify-content-center my-3 text-muted"></i>
                 <h4>Ingeniero de proyectos</h4>
-                <h6>lorem</h6>
+                <h6>2014 - 2018</h6>
             </div>
         </div>
       </section>
 
       <section class="bg-light">
           <div class="container">
-              <h1 class="font-weight-bold text-center pt-3 m-4 ">MIS ULTIMOS TRABAJOS</h1>
+              <h1 class="font-weight-bold text-center p-3 m-4 title_" id="MIS_ULTIMOS_TRABAJOS">MIS ULTIMOS TRABAJOS</h1>
               <hr class="border border-secondary mb-4">
             <div class="card-deck">
                 <div class="card m-3">
@@ -142,25 +142,27 @@
 
       <section>
         <div class="container">
-            <h1 class="text-center m-5">CONTACTO</h1>
+            <h1 class="text-center p-2 m-3 title_" id="CONTACTO">CONTACTO</h1>
                 <div class="typeform-widget" data-url="https://fsilvagalleguillos.typeform.com/to/I2lkXS" style="width: 100%; height: 500px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0; padding-top: 5px;"> powered by <a href="https://admin.typeform.com/signup?utm_campaign=I2lkXS&utm_source=typeform.com-01E7RC92N86MNZXVGWQ54W1GCW-free&utm_medium=typeform&utm_content=typeform-embedded-poweredbytypeform&utm_term=ES" style="color: #999" target="_blank">Typeform</a></div>
       </section>
 
-      <footer class="bg-secondary">
-          <div class="container">
-            <div class="d-flex justify-content-center align-middle">
-                <h1 class="font-weight-bold text-white">FELIPE =)</h1>
-                <i class="fab fa-instagram fa-4x"></i>
-                <i class="fab fa-facebook-f fa-4x"></i>
-                <i class="fab fa-twitter fa-4x"></i>
+      <footer class="bg-secondary" id="RRSS">
+          <div class="container p-3">
+            <div class="d-flex flex-wrap justify-content-center text-white">
+                <h1 class="font-weight-bold title_ align-middle" data-toggle="tooltip" title="visita mis RRSS :)">FELIPE  =)</h1>
+                <div class="ml-md-auto text-sm-center block">
+                <a href="https://www.instagram.com/fipeman/?hl=es-la"><i class="fab fa-instagram fa-3x mx-2"></i></a>
+                <a href="https://www.facebook.com/felipe.silvagalleguillos"><i class="fab fa-facebook-f fa-3x mx-2"></i></a>
+                <a href="https://twitter.com/fipeman"><i class="fab fa-twitter fa-3x mx-2"></i></a>
+                <a href="https://github.com/Fipeman"><i class="fab fa-github fa-3x mx-2"></i></i></a>
+                </div>
             </div>
           </div>
-
       </footer>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="assets/JS/index.js"></script> 
+    <script src="assets/js/index.js"></script> 
 </body>
 </html>
