--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container">
         <a class="navbar-brand title_" id="logo" href="#">FS</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,7 +52,7 @@
         <div class="container mt-3">
           <div class="row">
               <div class="col-12">  
-                <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio voluptatibus, nesciunt natus voluptatem similique tenetur rem obcaecati libero illo culpa quia cupiditate molestias maxime facere nulla possimus, distinctio reiciendis.</p>
+                <p class="font-weight-bold text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde odio voluptatibus, nesciunt natus voluptatem similique tenetur rem obcaecati libero illo culpa quia.</p>
               </div> 
           </div>
           <div class="row">
@@ -88,8 +88,8 @@
       </section>
 
       <section class="bg-light">
-          <div class="container">
-              <h1 class="font-weight-bold text-center p-3 m-4 title_" id="MIS_ULTIMOS_TRABAJOS">MIS ULTIMOS TRABAJOS</h1>
+          <div class="container p-1">
+              <h1 class="font-weight-bold text-center p-3 m-4 title_" id="MIS_ULTIMOS_TRABAJOS">MIS ÚLTIMOS TRABAJOS</h1>
               <hr class="border border-secondary mb-4">
             <div class="card-deck">
                 <div class="card m-3">
@@ -149,7 +149,7 @@
       <footer class="bg-secondary" id="RRSS">
           <div class="container p-3">
             <div class="d-flex flex-wrap justify-content-center text-white">
-                <h1 class="font-weight-bold title_ align-middle" data-toggle="tooltip" title="visita mis RRSS :)">FELIPE  =)</h1>
+                <h1 class="font-weight-bold title_ align-middle" data-toggle="tooltip" title="visita mis RRSS =)">FELIPE  =)</h1>
                 <div class="ml-md-auto text-sm-center block">
                 <a href="https://www.instagram.com/fipeman/?hl=es-la"><i class="fab fa-instagram fa-3x mx-2"></i></a>
                 <a href="https://www.facebook.com/felipe.silvagalleguillos"><i class="fab fa-facebook-f fa-3x mx-2"></i></a>
